grammar.js
    source_file: $ => repeat(choice($.declaration, ";")),

    /*
     * declarations
     */

    modifier: $ => choice("priv", "pub", "extern", "anx"),

    let: $ => seq(
      repeat($.modifier),
      "let",
      field("pattern", $.pattern),
      "=",
      field("value", $.expression),
    ),

    // `anx I = path` - an alias for the annex `path` denotes.
    anx: $ => seq(
      repeat($.modifier),
      "anx",
      field("name", $.identifier),
      "=",
      field("target", $.path),
    ),

    lam: $ => prec.right(seq(
      repeat($.modifier),
      field("kind", choice("lam", "con", "fun")),
      field("name", $.identifier),
      repeat1($.domain),
      optional(seq(":", field("codomain", $.expression))),
      choice(
        seq("=", field("body", $.expression)),
        ";", // a bodyless `extern` forward declaration
      ),
    )),

    rec: $ => prec.right(seq(
      repeat($.modifier),
      "rec",
      field("name", $.identifier),
      "=",
      field("body", $.expression),
    )),

    mutual: $ => seq(repeat($.modifier), "mutual", repeat(choice($.lam, $.rec, ";")), "end"),

    rule: $ => seq(
      repeat($.modifier),
      field("kind", choice("rule", "norm")),
      field("name", $.identifier),
      field("pattern", $.pattern),
      ":",
      field("lhs", $.expression),
      optional(seq("when", field("guard", $.expression))),
      "=>",
      field("rhs", $.expression),
    ),

    // `d+ e` - one or more declarations followed by the resulting expression.
    typed_binder: $ => prec.right(PREC.binder, seq(
      field("name", $.identifier),
      ":",
      field("type", $.expression),
    )),

    // `I+ ":" e` distributes one type over several names; only ever a list element.
    group: $ => seq(
      field("name", $.identifier),
      repeat1(field("name", $.identifier)),
      ":",
      field("type", $.expression),
    ),

    tuple_pattern: $ => seq("(", commaSep(choice($.group, $.pattern)), ")"),

    // `{...}` - an implicit domain; its elements are telescopes.
    implicit: $ => seq("{", commaSep(choice($.group, $.telescope)), "}"),

    alias_pattern: $ => prec.left(PREC.binder, seq(
      $.pattern,
      "as",
      field("alias", $.identifier),
    )),

    // `t as I`; restricted to the bracketed forms, where it is actually useful -
    // `[...] as I -> e` names the whole domain of a dependent function type.
    alias_telescope: $ => prec.left(PREC.binder, seq(
      choice($.sigma, $.implicit, $.alias_telescope),
      "as",
      field("alias", $.identifier),
    )),

    // `p ("@" e)?` - a lambda domain plus its partial-evaluation filter.
    domain: $ => prec.right(seq(
      field("pattern", choice($.pattern, $.sigma, $.implicit)),
      optional($.filter),
    )),

    filter: $ => seq("@", field("value", $.expression)),

    /*
     * expressions
     */

    _operand: $ => choice(
      $.primitive,
      $.path,
      $.type,
      $.rule_type,
      $.nat_literal,
      $.idx_literal,
      $.float_literal,
      $.char_literal,
      $.string_literal,
      $.bot,
      $.top,
      $.annotated,
      $.decl_expr,
      $.cn_type,
      $.fn_type,
      $.lambda,
      $.ret,
      $.single,
      $.wrap,
      $.array,
      $.pack,
      $.sigma,
      $.tuple,
      $.match,
    ),

    primitive: $ => choice(
      "Univ",
      "Nat",
      "Idx",
      "Bool",
      "tt",
      "ff",
      "i1", "i8", "i16", "i32", "i64",
      "I1", "I8", "I16", "I32", "I64",
      "□",
    ),

    // `*` abbreviates `Type (0:Univ)`; `★` is its Unicode spelling.
    star: $ => choice("*", "★"),

    bot: $ => choice("bot", "⊥"),
    top: $ => choice("top", "⊤"),

    // `Type e` and `Rule e` bound their argument at application level.
    type: $ => prec.left(PREC.app, seq("Type", field("level", $.expression))),
    rule_type: $ => prec.left(PREC.app, seq("Rule", field("meta", $.expression))),

    path: $ => seq(
      $.identifier,
      repeat(seq(".", $.identifier)),
    ),

    /*
     * literals
     */

    // A sign is part of the literal *expression*, never of the literal token.  It is kept
    // out of `_operand` on purpose: after a complete expression `+`/`-` are always the
    // infix operators, so `f -23` subtracts - pass a negative argument as `f (-23)`.
    signed: $ => seq(
      field("sign", choice("+", "-")),
      field("value", choice(
        $.annotated,
        $.nat_literal,
        $.idx_literal,
        $.float_literal,
      )),
    ),

    // The literal parser reads the ascription itself and bounds its type at `Lit` level,
    // so `0:Idx s` is `(0:Idx) s`.
    annotated: $ => prec(PREC.lit, seq(
      field("value", choice(
        $.nat_literal,
        $.idx_literal,
        $.float_literal,
        $.char_literal,
        $.string_literal,
        $.bot,
        $.top,
      )),
      ":",
      field("type", $._operand),
    )),

    // The base prefix is split off as its own `base_prefix` token so highlighting can set the
    // `0x` of `0xdeadbeef` apart from its digits; the digit tokens stay hidden and are paired
    // with their prefix, so `0b19` is still no literal.
    nat_literal: $ => choice(
      $._dec_digits,
      seq(field("prefix", alias($._bin_prefix, $.base_prefix)), $._bin_digits),
      seq(field("prefix", alias($._oct_prefix, $.base_prefix)), $._oct_digits),
      seq(field("prefix", alias($._hex_prefix, $.base_prefix)), $._hex_digits),
    ),

    // `23₂`, `23_2`, `23i32` - a literal of type `Idx n`; the `iN` form spells a bit width.
    // The size is split off as its own `idx_suffix` token so highlighting can set it apart from
    // the value.  `token.immediate` keeps the two glued together - `23 i32` stays an application -
    // and the `prec` makes the suffix beat the identically spelled `identifier` / `i32` primitive.
    idx_literal: $ => seq(
      field("value", $.nat_literal),
      field("suffix", $.idx_suffix),
    ),

    idx_suffix: $ => token.immediate(prec(1, choice(
      /[₀-₉]+/,
      /_[0-9]+/,
      /[iI][0-9]+/,
    ))),

    // Likewise for the exponent: `1.5e10` is mantissa + `exponent`.  A decimal float needs either
    // a fraction or an exponent - plain digits are a `nat_literal` - and a hexadecimal one always
    // needs its exponent, exactly as the reference lexer demands.
    float_literal: $ => choice(
      seq($._dec_digits, field("exponent", alias($._dec_exponent, $.exponent))),
      seq($._dec_fraction, optional(field("exponent", alias($._dec_exponent, $.exponent)))),
      seq(
        field("prefix", alias($._hex_prefix, $.base_prefix)),
        choice($._hex_digits, $._hex_fraction),
        field("exponent", alias($._hex_exponent, $.exponent)),
      ),
    ),

    // The pieces the two rules above are built from.  Everything that follows a prefix or a
    // mantissa is `token.immediate`, so a blank always breaks the literal apart again.
    _bin_prefix: $ => /0[bB]/,
    _oct_prefix: $ => /0[oO]/,
    _hex_prefix: $ => /0[xX]/,

    _bin_digits: $ => token.immediate(/[01]+/),
    _oct_digits: $ => token.immediate(/[0-7]+/),
    _hex_digits: $ => token.immediate(/[0-9a-fA-F]+/),
    _dec_digits: $ => /[0-9]+/,

    _dec_fraction: $ => token(choice(
      /[0-9]+\.[0-9]*/,
      /[0-9]*\.[0-9]+/,
    )),

    _hex_fraction: $ => token.immediate(choice(
      /[0-9a-fA-F]+\.[0-9a-fA-F]*/,
      /[0-9a-fA-F]*\.[0-9a-fA-F]+/,
    )),

    _dec_exponent: $ => token.immediate(/[eE][+-]?[0-9]+/),
    _hex_exponent: $ => token.immediate(/[pP][+-]?[0-9]+/),

    string_literal: $ => /"(\\.|[^"\\])*"/,

    char_literal: $ => /'(\\.|[^'\\])'/,

    /*
     * compound expressions
     */

    pi: $ => prec.right(PREC.arrow, seq(
      field("domain", choice($.expression, $.implicit, $.alias_telescope)),
      $._arrow_r,
      field("codomain", $.expression),
    )),

    // `Cn t` abbreviates `t → ⊥` and so has no codomain at all.
    cn_type: $ => prec.right(PREC.trailing, seq(
      "Cn",
      field("domain", choice($.telescope, $.implicit)),
    )),

    // `Fn t → e` receives an implicit `ret` continuation.  Unlike `Cn`, its domain is
    // bounded at `pi` level so that it stops before the `→`.
    single: $ => seq("«", field("body", $.expression), "»"),

    wrap: $ => seq("‹", field("body", $.expression), "›"),

    array: $ => seq(
      "«",
      field("shape", $.shape),
      ";",
      field("body", $.expression),
      "»",
    ),

    pack: $ => seq(
      "‹",
      field("shape", $.shape),
      ";",
      field("body", $.expression),
      "›",
    ),

    shape: $ => commaSep1($.arity),

    arity: $ => choice($.typed_binder, $.expression),

    sigma: $ => seq("[", commaSep(choice($.group, $.telescope)), "]"),

    tuple: $ => seq("(", commaSep($.expression), ")"),

    _atom: $ => choice($._operand, $.extract),

    // An operand that binds at least as tightly as application.
    _app_expression: $ => choice($._atom, $.application),

    // The prefix `#` eliminates a singleton; only an application and an extract reach into it.
    unwrap: $ => prec.right(PREC.prefix, seq("#", field("operand", $.expression))),

    extract: $ => prec.left(PREC.extract, seq(
      field("aggregate", $._atom),
      "#",
      field("index", $._operand),
    )),

    // `e ("#" e)+ ← e` yields a *new* aggregate; the `#` on the left is mandatory.
    application: $ => prec.left(PREC.app, seq(
      field("callee", $._app_expression),
      optional("@"),
      field("argument", $._atom),
    )),

    // `a op b` is sugar for `` `op (a, b) ``.
    binary_expression: $ => choice(
      prec.left(PREC.shift, seq(
        field("left", $.expression),
        field("operator", choice("<<", ">>")),
        field("right", $.expression),
      )),
      prec.left(PREC.mul, seq(
        field("left", $.expression),
        field("operator", choice("*", "★", "/", "%")),
        field("right", $.expression),
      )),
      prec.left(PREC.add, seq(
        field("left", $.expression),
        field("operator", choice("+", "-")),
        field("right", $.expression),
      )),
      prec.left(PREC.rel, seq(
        field("left", $.expression),
        field("operator", choice("<", "<=", ">", ">=")),
        field("right", $.expression),
      )),
      prec.left(PREC.eq, seq(
        field("left", $.expression),
        field("operator", choice("==", "!=")),
        field("right", $.expression),
      )),
    ),

    // `| I: e | ...`; a lone `|` is the empty variant and the last payload extends as far right as it can.
    union: $ => prec.left(PREC.union, seq(
      field("left", $.expression),
      "∪",
      field("right", $.expression),
    )),

    injection: $ => prec.right(PREC.inj, seq(
      field("value", $.expression),
      "inj",
      field("type", $.expression),
    )),

    _arrow_r: $ => choice("->", "→"),
    identifier: $ => token(choice(
      /[_a-zA-Z][_a-zA-Z0-9]*/,
      /`(==|!=|<<|<=|>>|>=|[-+*\/%<>])/,
    )),

    line_comment: $ => /\/\/([^/].*)?/,

    doc_comment: $ => seq("///", $.doc_content),

    block_comment: $ => seq("/*", /[\/\*]?|(\*[^\/]|[^\*]\/|[^\/\*])*\*+/, "/"),
