test/corpus/let.txt
=====
simple let declaration
=====

let x = 3;

---

(source_file
  (let
    (identifier)
    (nat_literal)))

=====
let with a tuple pattern
=====

let (m, ptr) = mem.alloc (I32, 0) m;

---

(source_file
  (let
    (tuple_pattern
      (identifier)
      (identifier))
    (application
      (application
        (path
          (identifier)
          (identifier))
        (tuple
          (primitive)
          (nat_literal)))
      (path
        (identifier)))))

=====
let with an alias pattern
=====

let (a, b, c) as abc = (1, 2, 3);

---

(source_file
  (let
    (alias_pattern
      (tuple_pattern
        (identifier)
        (identifier)
        (identifier))
      (identifier))
    (tuple
      (nat_literal)
      (nat_literal)
      (nat_literal))))

=====
let with a group
=====

let (a b: Nat) = 0;

---

(source_file
  (let
    (tuple_pattern
      (group
        (identifier)
        (identifier)
        (primitive)))
    (nat_literal)))

=====
let binding an infix operator
=====

pub let `+ = core.nat.add;

---

(source_file
  (let
    (modifier)
    (identifier)
    (path
      (identifier)
      (identifier)
      (identifier))))

=====
annex let
=====

anx let us = 0b00;

---

(source_file
  (let
    (modifier)
    (identifier)
    (nat_literal
      (base_prefix))))

=====
alias declaration
=====

anx nsw = core.mode.uS;

---

(source_file
  (anx
    (identifier)
    (path
      (identifier)
      (identifier)
      (identifier))))

=====
recursive declaration
=====

rec S = [n: Nat, «n; Nat»];

---

(source_file
  (rec
    (identifier)
    (sigma
      (typed_binder
        (identifier)
        (primitive))
      (array
        (shape
          (arity
            (path
              (identifier))))
        (primitive)))))

=====
nominal declaration
=====

nom Meter = I32;

---

(source_file
  (nom
    (identifier)
    (primitive)))

=====
mutually recursive declarations
=====

mutual
    rec A = [Nat, B];
    rec B = [Nat, A];
end

---

(source_file
  (mutual
    (rec
      (identifier)
      (sigma
        (primitive)
        (path
          (identifier))))
    (rec
      (identifier)
      (sigma
        (primitive)
        (path
          (identifier))))))

=====
mutual rec and lambda declaration
=====

mutual
    rec T = [Nat, f];
    lam f (x: T): T = x;
end

---

(source_file
  (mutual
    (rec
      (identifier)
      (sigma
        (primitive)
        (path
          (identifier))))
    (lam
      (identifier)
      (domain
        (tuple_pattern
          (typed_binder
            (identifier)
            (path
              (identifier)))))
      (path
        (identifier))
      (path
        (identifier)))))

=====
rewrite rule
=====

rule foo (a: Nat): (a + a) => (a * 2);

---

(source_file
  (rule
    (identifier)
    (tuple_pattern
      (typed_binder
        (identifier)
        (primitive)))
    (tuple
      (binary_expression
        (path
          (identifier))
        (path
          (identifier))))
    (tuple
      (binary_expression
        (path
          (identifier))
        (nat_literal)))))

=====
guarded normalizing rule
=====

norm bar (a b: Nat): a + b when a == b => a * 2;

---

(source_file
  (rule
    (identifier)
    (tuple_pattern
      (group
        (identifier)
        (identifier)
        (primitive)))
    (binary_expression
      (path
        (identifier))
      (path
        (identifier)))
    (binary_expression
      (path
        (identifier))
      (path
        (identifier)))
    (binary_expression
      (path
        (identifier))
      (nat_literal))))
