test/corpus/new.txt
=====
bare identifier pattern
=====

let x = 0;

---

(source_file
  (let
    (identifier)
    (nat_literal)))

=====
typed binder
=====

con f (x: Nat) = ();

---

(source_file
  (lam
    (identifier)
    (domain
      (tuple_pattern
        (typed_binder
          (identifier)
          (primitive))))
    (tuple)))

=====
identifier group
=====

con f (a b c: Nat, d e: Bool) = ();

---

(source_file
  (lam
    (identifier)
    (domain
      (tuple_pattern
        (group
          (identifier)
          (identifier)
          (identifier)
          (primitive))
        (group
          (identifier)
          (identifier)
          (primitive))))
    (tuple)))

=====
telescope group
=====

let t = [a b c: Nat, d e: Bool];

---

(source_file
  (let
    (identifier)
    (sigma
      (group
        (identifier)
        (identifier)
        (identifier)
        (primitive))
      (group
        (identifier)
        (identifier)
        (primitive)))))

=====
an unnamed telescope element is a type
=====

let t = [Nat, Bool];

---

(source_file
  (let
    (identifier)
    (sigma
      (primitive)
      (primitive))))

=====
a telescope element may be an application
=====

let t = Cn [mem: mem.M 0, I32];

---

(source_file
  (let
    (identifier)
    (cn_type
      (sigma
        (typed_binder
          (identifier)
          (application
            (path
              (identifier)
              (identifier))
            (nat_literal)))
        (primitive)))))

=====
fake telescope
=====

lam foo [[Nat] → Nat] = 0;

---

(source_file
  (lam
    (identifier)
    (domain
      (sigma
        (pi
          (sigma
            (primitive))
          (primitive))))
    (nat_literal)))

=====
alias pattern
=====

con f ((a, b) as ab) = ();

---

(source_file
  (lam
    (identifier)
    (domain
      (tuple_pattern
        (alias_pattern
          (tuple_pattern
            (identifier)
            (identifier))
          (identifier))))
    (tuple)))

=====
partial evaluation filter
=====

lam f (x: I32) @ x : I32 = x;

---

(source_file
  (lam
    (identifier)
    (domain
      (tuple_pattern
        (typed_binder
          (identifier)
          (primitive)))
      (filter
        (path
          (identifier))))
    (primitive)
    (path
      (identifier))))

=====
curried domains
=====

lam f (T: *) {s: Nat} [Nat] (x: T): T = x;

---

(source_file
  (lam
    (identifier)
    (domain
      (tuple_pattern
        (typed_binder
          (identifier)
          (star))))
    (domain
      (implicit
        (typed_binder
          (identifier)
          (primitive))))
    (domain
      (sigma
        (primitive)))
    (domain
      (tuple_pattern
        (typed_binder
          (identifier)
          (path
            (identifier)))))
    (path
      (identifier))
    (path
      (identifier))))

=====
trailing commas
=====

let t = [Nat, Bool,];
con f (a: Nat,) = ();

---

(source_file
  (let
    (identifier)
    (sigma
      (primitive)
      (primitive)))
  (lam
    (identifier)
    (domain
      (tuple_pattern
        (typed_binder
          (identifier)
          (primitive))))
    (tuple)))

=====
comments
=====

/// doc comment
// line comment
/* block
   comment */
let x = 0;

---

(source_file
  (doc_comment
    (doc_content))
  (line_comment)
  (block_comment)
  (let
    (identifier)
    (nat_literal)))
