test/corpus/type.txt
=====
kinds
=====

let a = Univ;
let b = Type 0;
let c = *;
let d = ★;
let e = □;

---

(source_file
  (let
    (identifier)
    (primitive))
  (let
    (identifier)
    (type
      (nat_literal)))
  (let
    (identifier)
    (star))
  (let
    (identifier)
    (star))
  (let
    (identifier)
    (primitive)))

=====
builtin types
=====

let a = Nat;
let b = Idx;
let c = Bool;
let d = I32;
let e = i64;

---

(source_file
  (let
    (identifier)
    (primitive))
  (let
    (identifier)
    (primitive))
  (let
    (identifier)
    (primitive))
  (let
    (identifier)
    (primitive))
  (let
    (identifier)
    (primitive)))

=====
rule type
=====

let r = Rule Nat;

---

(source_file
  (let
    (identifier)
    (rule_type
      (primitive))))

=====
arrow type
=====

let t = Nat → Bool;

---

(source_file
  (let
    (identifier)
    (pi
      (primitive)
      (primitive))))

=====
ascii arrow type
=====

let t = Nat -> Bool;

---

(source_file
  (let
    (identifier)
    (pi
      (primitive)
      (primitive))))

=====
arrow is right associative
=====

let t = A → B → C;

---

(source_file
  (let
    (identifier)
    (pi
      (path
        (identifier))
      (pi
        (path
          (identifier))
        (path
          (identifier))))))

=====
dependent function type
=====

let t = [T: *] → T;

---

(source_file
  (let
    (identifier)
    (pi
      (sigma
        (typed_binder
          (identifier)
          (star)))
      (path
        (identifier)))))

=====
implicit domain
=====

let t = {T: *} → T;

---

(source_file
  (let
    (identifier)
    (pi
      (implicit
        (typed_binder
          (identifier)
          (star)))
      (path
        (identifier)))))

=====
named domain
=====

let t = [A, B] as p → C;

---

(source_file
  (let
    (identifier)
    (pi
      (alias_telescope
        (sigma
          (path
            (identifier))
          (path
            (identifier)))
        (identifier))
      (path
        (identifier)))))

=====
sigma
=====

let t = [n: Nat, «n; Nat»];

---

(source_file
  (let
    (identifier)
    (sigma
      (typed_binder
        (identifier)
        (primitive))
      (array
        (shape
          (arity
            (path
              (identifier))))
        (primitive)))))

=====
array
=====

let t = «2; Nat»;

---

(source_file
  (let
    (identifier)
    (array
      (shape
        (arity
          (nat_literal)))
      (primitive))))

=====
array with a named shape
=====

let t = «i: n, j: s#i; body»;

---

(source_file
  (let
    (identifier)
    (array
      (shape
        (arity
          (typed_binder
            (identifier)
            (path
              (identifier))))
        (arity
          (typed_binder
            (identifier)
            (extract
              (path
                (identifier))
              (path
                (identifier))))))
      (path
        (identifier)))))

=====
shape with a trailing comma
=====

let t = «2, 3,; Nat»;

---

(source_file
  (let
    (identifier)
    (array
      (shape
        (arity
          (nat_literal))
        (arity
          (nat_literal)))
      (primitive))))

=====
pack
=====

let t = ‹3; 0›;

---

(source_file
  (let
    (identifier)
    (pack
      (shape
        (arity
          (nat_literal)))
      (nat_literal))))

=====
singleton type
=====

let t = «Nat»;

---

(source_file
  (let
    (identifier)
    (single
      (primitive))))

=====
singleton intro and elim
=====

let t = #‹23›;

---

(source_file
  (let
    (identifier)
    (unwrap
      (wrap
        (nat_literal)))))

=====
prefix # is looser than application, tighter than +
=====

let t = #f x + 1;

---

(source_file
  (let
    (identifier)
    (binary_expression
      (unwrap
        (application
          (path
            (identifier))
          (path
            (identifier))))
      (nat_literal))))

=====
union type
=====

let t = A ∪ B;

---

(source_file
  (let
    (identifier)
    (union
      (path
        (identifier))
      (path
        (identifier)))))

=====
injection
=====

let t = x inj A ∪ B;

---

(source_file
  (let
    (identifier)
    (injection
      (path
        (identifier))
      (union
        (path
          (identifier))
        (path
          (identifier))))))
